--- a/app/src/main/res/layout/activity_customer__list.xml
+++ b/app/src/main/res/layout/activity_customer__list.xml
@@ -59,19 +59,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    android:text="Edit"/>
+                    android:gravity="center"
+
+                    android:text="Edit/Delete"/>
 
 
 
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:text="Delete">
 
-
-                </TextView>
 
             </TableRow>
 
