--- a/app/src/main/res/layout/activity_damage.xml
+++ b/app/src/main/res/layout/activity_damage.xml
@@ -22,7 +22,7 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="120dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp">
 
@@ -31,9 +31,9 @@
                 android:padding="8dp">
 
                 <TextView
-                    android:layout_width="6dp"
+                    android:layout_width="13dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:text="Sr.no" />
 
                 <TextView
@@ -50,17 +50,11 @@
                     android:layout_width="4dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
+
                     android:text="ITEM Name"/>
 
 
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="DAMAGE">
 
-
-                </Button>
 
             </TableRow>
 
@@ -69,7 +63,7 @@
                 android:padding="5dp">
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="13dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
 
@@ -97,6 +91,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+
                     android:text="" />
 
                 <TextView
@@ -133,13 +128,22 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
 
             </TableRow>
         </TableLayout>
+        <Button
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/border_table"
+            android:text="DAMAGE">
+
+
+        </Button>
+
     </RelativeLayout>
 
 
