--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -6,14 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".LoginModule.ForgetPassword">
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
-        android:paddingTop="80dp"
-        android:text="Forget Password"
-
+        android:text="Forget Password "
+        android:gravity="center"
+        android:textStyle="bold"
         android:textSize="25dp"
-        android:textStyle="bold" />
+        android:background="#F77F76"
+        />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -21,7 +22,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="225dp"
         android:layout_marginLeft="12dp"
-        android:text="Username/ID:"
+        android:text="Username/ID :"
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
