--- a/app/src/main/res/layout/activity_stock__out__view.xml
+++ b/app/src/main/res/layout/activity_stock__out__view.xml
@@ -22,7 +22,7 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="120dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
@@ -40,12 +40,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="Bill No."/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="Date" />
 
 
@@ -54,17 +56,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="Customer Name"/>
 
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="SHOW">
 
-
-            </Button>
 
         </TableRow>
 
@@ -126,11 +122,6 @@
                 android:layout_weight="1"
                 android:text="" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="" />
 
         </TableRow>
 
@@ -161,5 +152,17 @@
 
         </TableRow>
     </TableLayout>
+        <Button
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/border_table"
+            android:text="SHOW">
+
+
+        </Button>
     </RelativeLayout>
 </ScrollView>
