--- a/app/src/main/res/layout/activity_supplier__list.xml
+++ b/app/src/main/res/layout/activity_supplier__list.xml
@@ -40,12 +40,14 @@
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="Supplier Name" />
 
                 <TextView
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="Supplier Contact" />
 
 
@@ -53,25 +55,20 @@
                     android:layout_width="55dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="Supplier Address" />
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Edit"/>
+                    android:gravity="center"
+                    android:text="Edit/Delete"/>
 
 
 
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Delete">
 
-
-                </TextView>
 
             </TableRow>
 
