--- a/app/src/main/res/layout/activity_add__item.xml
+++ b/app/src/main/res/layout/activity_add__item.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Services.Items.Add_Item">
+    tools:context=".Services.Items.Add_Item"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="match_parent"
@@ -17,46 +22,180 @@
         />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="195dp"
-        android:layout_marginLeft="10dp"
-        android:text="ITEM Barcoad:"
-        android:textStyle="bold"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <Button
-        android:id="@+id/barcodebtn"
-        android:layout_width="129dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView"
-        android:layout_marginLeft="56dp"
-        android:layout_marginTop="195dp"
-        android:layout_toRightOf="@+id/textView2"
-        android:hint="Generated"></Button>
-
-    <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/modelno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="60dp"
-        android:text="ITEM Name:"
+        android:layout_marginTop="140dp"
+        android:textStyle="bold"
+        android:textSize="15dp"
+        android:layout_marginLeft="10dp"
+        android:text="Model No :"
+
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/modelnoEditText"
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+
+        android:hint="Enter model no."
+        android:background="@drawable/border_table"
+        android:layout_marginTop="140dp"
+        android:layout_marginLeft="130dp"/>
+
+    <TextView
+        android:id="@+id/serialno"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="220dp"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        android:layout_marginLeft="10dp"
+        android:text="Serial no:"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+       />
+
+    <EditText
+        android:id="@+id/serialnoEditText"
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:layout_below="@+id/textView2"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="220dp"
+        android:background="@drawable/border_table"
+        android:hint="Enter serial no."/>
+    <TextView
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="280dp"
+        android:text="Specification"
+        android:textStyle="bold"
+        android:id="@+id/specification"
+        android:layout_marginLeft="10dp"/>
+    <EditText
+        android:id="@+id/specificationEditText"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+        android:layout_below="@+id/textView2"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="280dp"
+        android:hint="Enter specification."
+        android:background="@drawable/border_table"/>
+
+    <TextView
+        android:id="@+id/supplier"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="400dp"
+        android:textSize="15dp"
+        android:text="Supplier name:"
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
-        android:id="@+id/barnameEditText"
+        android:id="@+id/supplierrnameEditText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:layout_below="@+id/textView2"
-        android:hint="Enter name"
-        android:layout_marginTop="60dp"
         android:layout_marginLeft="130dp"
-        android:inputType="textPassword" />
+        android:layout_marginTop="400dp"
+        android:background="@drawable/border_table"
+        android:hint="Enter supplier name"/>
+
+    <TextView
+        android:id="@+id/itemname"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="80dp"
+        android:textSize="15dp"
+        android:text="ITEM Name:"
+        android:textStyle="bold"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <EditText
+            android:id="@+id/itemnameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:layout_below="@+id/textView2"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="60dp"
+
+            android:background="@drawable/border_table"
+            android:hint="Enter name" />
+    <TextView
+        android:id="@+id/mobileno"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@+id/textView2"
+        android:textSize="15dp"
+        android:layout_marginTop="470dp"
+        android:text="Mobile no:"
+        android:textStyle="bold"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/mobilenoEditText"
+        android:layout_width="274dp"
+        android:layout_height="32dp"
+        android:layout_below="@+id/textView2"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="470dp"
+        android:background="@drawable/border_table"
+        android:hint="Enter mobile no."
+         />
+    <TextView
+        android:id="@+id/storagelocation"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="530dp"
+        android:textSize="15dp"
+        android:text="Strorage Location:"
+        android:textStyle="bold"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/storagelocationEditText"
+        android:layout_width="274dp"
+        android:layout_height="32dp"
+        android:layout_below="@+id/textView2"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="530dp"
+        android:background="@drawable/border_table"
+        android:hint="Enter Location" />
+    <TextView
+        android:id="@+id/category"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_marginLeft="10dp"
+        android:textSize="15dp"
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="590dp"
+        android:text="ITEM Category:"
+        android:textStyle="bold"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    <Spinner
+        android:layout_width="220dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="590dp"
+
+        android:entries="@array/select"
+        android:layout_marginLeft="120dp"></Spinner>
 
 
     <Button
@@ -64,7 +203,8 @@
         android:layout_width="210dp"
         android:layout_height="37dp"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="650dp"
+
         android:gravity="center"
         android:text="SUBMIT "
         />
@@ -72,6 +212,6 @@
 
 
 
+    </RelativeLayout>
 
-
-</RelativeLayout>
+</ScrollView>
