--- a/app/src/main/res/layout/activity_add__item.xml
+++ b/app/src/main/res/layout/activity_add__item.xml
@@ -190,6 +190,7 @@
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium" />
     <Spinner
+        android:id="@+id/category_spinner"
         android:layout_width="220dp"
         android:layout_height="30dp"
         android:layout_marginTop="590dp"
@@ -199,7 +200,7 @@
 
 
     <Button
-        android:id="@+id/submit"
+        android:id="@+id/submit_item"
         android:layout_width="210dp"
         android:layout_height="37dp"
         android:layout_marginLeft="90dp"
