--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -32,10 +32,11 @@
         android:layout_marginRight="9dp"
         android:layout_height="35dp"
         android:layout_alignBottom="@+id/textView2"
+        android:background="@drawable/border_table"
         android:layout_marginLeft="20dp"
 
         android:layout_toRightOf="@+id/textView2"
-        android:background="@drawable/edit_text_boarder1"
+
         android:hint="username">
         <requestFocus />
     </EditText>
