--- a/app/src/main/res/layout/activity_customer__list.xml
+++ b/app/src/main/res/layout/activity_customer__list.xml
@@ -77,10 +77,19 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:background="@drawable/border_table"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     />
@@ -88,17 +97,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1">
                 </TextView>
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
@@ -117,6 +122,7 @@
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="" />
@@ -124,11 +130,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text=" " />
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="" />
@@ -136,12 +144,14 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
@@ -154,30 +164,35 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text=" " />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
