--- a/app/src/main/res/layout/activity_loginpg.xml
+++ b/app/src/main/res/layout/activity_loginpg.xml
@@ -48,7 +48,7 @@
         android:layout_alignBottom="@+id/textView2"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/textView2"
-        android:background="@drawable/edit_text_boarder1"
+        android:background="@drawable/border_table"
         android:hint="username">
         <requestFocus/>
 
@@ -73,7 +73,7 @@
         android:layout_alignBottom="@+id/textView3"
         android:layout_alignLeft="@+id/usernameET"
         android:layout_alignRight="@+id/usernameET"
-        android:background="@drawable/edit_text_boarder1"
+        android:background="@drawable/border_table"
         android:hint="password"
         android:inputType="textPassword" />
     <requestFocus/>
