--- a/app/src/main/res/layout/activity_return.xml
+++ b/app/src/main/res/layout/activity_return.xml
@@ -70,23 +70,27 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1">
                 </TextView>
 
@@ -99,6 +103,7 @@
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="" />
@@ -106,11 +111,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text=" " />
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="" />
@@ -118,6 +125,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
@@ -131,29 +139,33 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1" />
 
             </TableRow>
         </TableLayout>
         <Button
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:layout_marginLeft="110dp"
