--- a/app/src/main/res/layout/activity_supplier__list.xml
+++ b/app/src/main/res/layout/activity_supplier__list.xml
@@ -78,23 +78,27 @@
 
                 <TextView
                     android:layout_width="match_parent"
+                    android:background="@drawable/border_table"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     />
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
                 </TextView>
@@ -102,6 +106,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1">
 
                 </TextView>
@@ -119,12 +124,14 @@
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="" />
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text=" " />
@@ -132,18 +139,21 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
@@ -156,30 +166,35 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text=" " />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border_table"
                     android:layout_weight="1"
                     android:text="" />
 
