--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -71,23 +71,27 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/border_table"
             android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/border_table"
             android:layout_weight="1"
           />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/border_table"
             android:layout_weight="1"
           />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/border_table"
             android:layout_weight="1">
         </TextView>
 
@@ -106,17 +110,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/border_table"
             android:layout_weight="1"
             android:text="" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/border_table"
             android:layout_weight="1"
             android:text=" " />
 
         <TextView
             android:layout_width="wrap_content"
+            android:background="@drawable/border_table"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="" />
@@ -124,6 +131,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/border_table"
             android:layout_weight="1"
             android:text="" />
 
@@ -137,24 +145,28 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/border_table"
                 android:layout_weight="1"
                 android:text="" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/border_table"
                 android:layout_weight="1"
                 android:text=" " />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/border_table"
                 android:layout_weight="1"
                 android:text="" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/border_table"
                 android:layout_weight="1"
                 android:text="" />
 
